Bug 330351 - Filterbrush 'Color to Alpha' is not adjustable and behaves weird
Summary: Filterbrush 'Color to Alpha' is not adjustable and behaves weird
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Brush engines (other bugs)
Version First Reported In: 2.8 Beta
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-01-24 08:02 UTC by vascoalexander
Modified: 2014-01-27 12:39 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description vascoalexander 2014-01-24 08:02:30 UTC
Version 2.8 Beta 2 (git bbf3e48)
Using KDE Development Platform 4.11.4

I have had 2 Presets that use the color to alpha Filterbrush. These Presets are not loaded anymore. Activating the Filterbrush in the Brushwindow and setting it to Color to Alpha results in a switch from the brush tool to the color selector tool as long as the brushwindow is open. Due to the fact that the brush tool is not active the settings are greyed out. Closing the (attached) window results in a switch to the shape handling tool.

With the brushwindow detached and opened one can switch to the brushtool to manipulate the settings. That is not possible when the window is attached -> settings are greyed out even when switched to the approbiate tool.

When switching to another preset, the shape handling tool is automatically chosen, making the whole thing even more confusing.


Reproducible: Always

Steps to Reproduce:
1. Choose any preset and open the brushwindow
2. Choose the Filterbrush engine and set it to 'Color to Alpha'
3.
Comment 1 Dmitry Kazakov 2014-01-27 12:36:59 UTC
Git commit c9a283b7a50c42b86c879058cc3350ca969d79f0 by Dmitry Kazakov.
Committed on 27/01/2014 at 12:36.
Pushed by dkazakov into branch 'master'.

Fix Color To Alpha filter widget when used in the Filter Brush

Also don't call the switchBackRequested() in destructor, since it has
already been called once in hideEvent().
Related: bug 329753

M  +2    -7    krita/plugins/filters/colors/kis_wdg_color_to_alpha.cpp
M  +2    -2    krita/ui/kis_filter_manager.cc

http://commits.kde.org/calligra/c9a283b7a50c42b86c879058cc3350ca969d79f0
Comment 2 Dmitry Kazakov 2014-01-27 12:39:05 UTC
Git commit 03d59605093a20ca28e8acaa60dd054880fe76b2 by Dmitry Kazakov.
Committed on 27/01/2014 at 12:36.
Pushed by dkazakov into branch 'calligra/2.8'.

Fix Color To Alpha filter widget when used in the Filter Brush

Also don't call the switchBackRequested() in destructor, since it has
already been called once in hideEvent().
Related: bug 329753

M  +2    -7    krita/plugins/filters/colors/kis_wdg_color_to_alpha.cpp
M  +2    -2    krita/ui/kis_filter_manager.cc

http://commits.kde.org/calligra/03d59605093a20ca28e8acaa60dd054880fe76b2