Fix Color To Alpha filter widget when used in the Filter Brush

Also don't call the switchBackRequested() in destructor, since it has
already been called once in hideEvent().

BUG:330351
BUG:329753